<resources>
    <string name="app_name">CollapseToolbarExample</string>
    <string name="text_content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin consectetur diam id aliquam scelerisque. Donec ultrices lacus vel </string>
    <string name="user_name">Register to join the club</string>
    <string name="terms_condition_title">Accept terms and Conditions</string>
    <string name="login_title">Register to Join the Club</string>
    <string name="same_contact">Same as Contact Number</string>
    <string name="create_your_account">Create your account</string>
    <string name="full_name">Full name*</string>
    <string name="enter_name_as_per_aadhar_card">Enter name as per Aadhar card</string>
    <string name="email">Email</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="verify">Verify</string>
    <string name="contact_number">Contact Number</string>
    <string name="_91">+91</string>
    <string name="whatsapp_number">Whatsapp Number</string>
    <string name="date_of_birth">Date of Birth*</string>
    <string name="select_dob">Select DOB</string>
    <string name="select_gender">Select Gender</string>
    <string name="save">Save</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="others">Others</string>
</resources>