<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFE7D0"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/collapse_bar">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="-40dp"
        android:background="#FFE7D0"
        app:cardCornerRadius="40dp">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="50dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:orientation="vertical">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:text="@string/create_your_account"
                    android:textAlignment="center"
                    android:textColor="#000"
                    android:textSize="22sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/full_name"
                    android:textColor="@color/textColorForm"
                    android:textSize="16sp" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/fNameEditText"
                        android:layout_width="match_parent"
                        android:layout_height="70dp"

                        android:background="@drawable/edit_text_border"
                        android:hint="@string/enter_name_as_per_aadhar_card"
                        android:paddingStart="15dp"
                        android:paddingLeft="15dp"
                        android:singleLine="true"
                        android:textColor="@color/textColorFormHint"
                        android:textSize="16sp" />

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_gravity="end"
                        android:layout_marginTop="15dp"
                        android:layout_marginEnd="15dp"
                        android:layout_marginRight="15dp"
                        android:background="@drawable/ic_baseline_person_24">

                    </ImageView>
                </FrameLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/email"
                    android:textColor="@color/textColorForm"
                    android:textSize="16sp" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/fEmail"
                        android:layout_width="match_parent"
                        android:layout_height="70dp"

                        android:background="@drawable/edit_text_border"

                        android:hint="@string/enter_your_email"
                        android:paddingStart="15dp"
                        android:paddingLeft="15dp"
                        android:singleLine="true"

                        android:textColor="@color/textColorFormHint" />

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_gravity="end"
                        android:layout_marginTop="15dp"
                        android:layout_marginEnd="15dp"
                        android:layout_marginRight="15dp"
                        android:background="@drawable/ic_baseline_email_24">

                    </ImageView>
                </FrameLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="30dp"

                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/verify"
                        android:textAlignment="center"
                        android:textColor="#7946A9"
                        android:textSize="14sp"

                        />

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="10dp"
                        app:cardBackgroundColor="#7946A9"
                        app:cardCornerRadius="10dp">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/ic_baseline_arrow_forward_24"

                            />
                    </androidx.cardview.widget.CardView>
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/contact_number"
                    android:textColor="@color/textColorForm"
                    android:textSize="16sp" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/fPhone"
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:background="@drawable/edit_text_border"
                        android:hint="@string/_91"
                        android:paddingStart="15dp"
                        android:paddingLeft="15dp"
                        android:singleLine="true"
                        android:textColor="@color/textColorFormHint" />

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_gravity="end"
                        android:layout_marginTop="15dp"
                        android:layout_marginEnd="15dp"
                        android:layout_marginRight="15dp"
                        android:background="@drawable/ic_baseline_phone_24">

                    </ImageView>
                </FrameLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="30dp"

                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/verify"
                        android:textAlignment="center"
                        android:textColor="#7946A9"
                        android:textSize="14sp"

                        />

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="10dp"
                        app:cardBackgroundColor="#7946A9"
                        app:cardCornerRadius="10dp">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/ic_baseline_arrow_forward_24"

                            />
                    </androidx.cardview.widget.CardView>
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/whatsapp_number"
                    android:textColor="@color/textColorForm"
                    android:textSize="16sp" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/fWhatsapp"
                        android:layout_width="match_parent"
                        android:layout_height="70dp"

                        android:background="@drawable/edit_text_border"
                        android:hint="+91"
                        android:paddingStart="15dp"
                        android:paddingLeft="15dp"
                        android:singleLine="true"
                        android:textColor="@color/textColorFormHint"
                        android:textSize="16sp" />

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="end"
                        android:layout_marginTop="15dp"
                        android:layout_marginEnd="15dp"
                        android:layout_marginRight="15dp"
                        android:background="@drawable/whatsapp">

                    </ImageView>
                </FrameLayout>

                <CheckBox
                    android:id="@+id/checkBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/same_contact"
                    android:textColor="@color/textColorForm" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/date_of_birth"
                    android:textColor="@color/textColorForm"
                    android:textSize="16sp" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/fdob"
                        android:layout_width="match_parent"
                        android:layout_height="70dp"

                        android:background="@drawable/edit_text_border"
                        android:hint="@string/select_dob"
                        android:paddingLeft="15dp"
                        android:singleLine="true"
                        android:textColor="@color/textColorFormHint"
                        android:textSize="16sp" />

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_gravity="end"
                        android:layout_marginTop="15dp"
                        android:layout_marginEnd="15dp"
                        android:layout_marginRight="15dp"
                        android:background="@drawable/ic_baseline_date_range_24">

                    </ImageView>
                </FrameLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/select_gender"
                    android:textColor="@color/textColorForm"
                    android:textSize="16sp" />

                <com.google.android.flexbox.FlexboxLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:justifyContent="space_around">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">


                        <androidx.cardview.widget.CardView
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:elevation="10dp"
                            app:cardBackgroundColor="#fff"
                            app:cardCornerRadius="10dp">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:background="@drawable/female" />
                        </androidx.cardview.widget.CardView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/female"
                            android:textColor="@color/textColorForm"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <androidx.cardview.widget.CardView
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            app:cardBackgroundColor="#fff"
                            app:cardCornerRadius="10dp">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:background="@drawable/male" />

                        </androidx.cardview.widget.CardView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/male"
                            android:textColor="@color/textColorForm"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical">

                        <androidx.cardview.widget.CardView
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            app:cardBackgroundColor="#fff"

                            app:cardCornerRadius="10dp">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:background="@drawable/others" />
                        </androidx.cardview.widget.CardView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/others"
                            android:textColor="@color/textColorForm"
                            android:textSize="16sp" />
                    </LinearLayout>

                </com.google.android.flexbox.FlexboxLayout>

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_gravity="center">

                    <Button
                        android:id="@+id/button1"
                        android:layout_width="250dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/button_corner"
                        android:text="@string/save"
                        android:textColor="#ffffff"
                        />

                    <ImageView
                        android:id="@+id/image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/ic_baseline_arrow_forward_24"
                        android:layout_gravity="center"
                        android:elevation="5dp"
                        android:layout_marginLeft="33dp"
                        />
                </FrameLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

    </androidx.cardview.widget.CardView>
</LinearLayout>
